<resources>
    <string name="app_name">Lizaveta_Hurskaya_wt_15_30</string>
    <string name="table_of_currencies">Lista walut</string>
    <string name="gold">Złoto</string>
    <string name="currency_calculator">Przelicznik walut</string>
    <string name="rate_today">Aktualny kurs: %.5f</string>
    <string name="rate_yesterday">Poprzedni kurs: %.5f</string>
    <string name="weeekly_chart_label">Kursy z ostatniego tygodnia</string>
    <string name="monthly_chart_label">Kursy z ostatnich 30 dni</string>
    <string name="pln">PLN</string>
    <string name="enter_the_value">Wprowadź kwotę</string>
    <string name="spinner_prompt">Wybierz walutę</string>
</resources>