<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/details_flag"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/catamaran_medium"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/catamaran_medium"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_name" />

            <TextView
                android:id="@+id/today_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:fontFamily="@font/catamaran_medium"
                android:text="@string/rate_today"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/yesterday_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="24dp"
                android:fontFamily="@font/catamaran_medium"
                android:text="@string/rate_yesterday"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <TextView
                android:id="@+id/weekly_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/weeekly_chart_label"
                android:layout_margin="8dp"
                android:fontFamily="@font/catamaran_medium"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/weekly_chart"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_margin="24dp"
                app:layout_constraintTop_toBottomOf="@+id/weekly_label"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <TextView
                android:id="@+id/monthly_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/monthly_chart_label"
                android:layout_margin="8dp"
                android:fontFamily="@font/catamaran_medium"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/monthly_chart"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_margin="24dp"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="193dp"
                app:layout_constraintTop_toBottomOf="@+id/monthly_label"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>